<resources>
    <string name="app_name">Security Zone</string>
    <string name="welcome_message">Bienvenido a Security Zone!</string>
    <string name="status_blocked">Status: Bloqueado</string>
    <string name="status_open">Status: Abierto</string>
    <string name="today_entries">Hoy han entrado %1$d carros</string>
    <string name="month_entries">Este mes han entrado %1$.0f carros</string>
    <string name="today_exits">Hoy han salido %1$d carros</string>
    <string name="month_exits">Este mes han salido %1$.0f carros</string>
    <string name="back_button_desc">Regresar</string>
    <string name="unlock">Desbloquear</string>
    <string name="lock">Bloquear</string>
    <string name="date">Fecha: 27/06/2024</string>
    <string name="current_entries">Al momento han entrado %1$d carros</string>
    <string name="alerts_sent">Se han enviado %1$d alertas</string>
    <string name="view_monthly_report">Ver reporte mensual</string>
    <string name="message_of_the_day">Mandar mensaje al monitor</string>
    <string name="send">Enviar</string>
    <string name="alert_title">Alertas de Bloqueo</string>
    <string name="toggle_pluma" translatable="false">Toggle Pluma</string>
    <string name="pluma_up">Bajar Pluma</string>
    <string name="pluma_down">Levantar Pluma</string>
    <string name="enter_block_reason">Ingrese el motivo del bloqueo:</string>
    <string name="close_for_reservation">Cierre por reservación</string>
    <string name="close_for_maintenance">Cierre por mantenimiento</string>
    <string name="close_for_end_of_day">Cierre por fin del día</string>
    <string name="other_reason">Otro motivo</string>
    <string name="enter_here">Ingrese aquí</string>
    <string name="lock_title">Bloquear</string>
    <string name="positive">confirmar</string>
    <string name="negative">cancelar</string>
    <string name="lock_positive">Comando de bloqueo enviado al Arduino</string>
    <string name="lock_negative">Error al enviar el comando de bloqueo</string>
    <string name="unlock_positive">Comando de desbloqueo enviado al Arduino</string>
    <string name="unlock_negative">Error al enviar el comando de desbloqueo</string>
    <string name="save_result_positive">Bloqueo activado y guardado con éxito</string>
    <string name="save_result_negative">Error al guardar el bloqueo. Por favor, intente de nuevo.</string>
    <string name="bluetooth_positive">Conectado al dispositivo Bluetooth</string>
    <string name="bluetooth_negative">No se pudo conectar al dispositivo Bluetooth</string>
    <string name="command_positive">Comando enviado:</string>
    <string name="command_negative">Error al enviar el comando:</string>
    <string name="entrada">Entrada de vehículo</string>
    <string name="salida">Salida de vehiculo</string>
    <string name="unknown">Evento desconocido</string>
    <string name="reg_positive">Evento registrado:</string>
    <string name="reg_negative">Error al registrar el evento:</string>
    <string name="all_alerts_btn">Mostrar todas las alertas</string>
    <string name="choose_date_btn">Elegir la fecha</string>
    <string name="title">Titulo</string>
    <string name="remainder_wrt">Escriba su recordatorio</string>
    <string name="monthly_graphic_title">Grafico Mensual</string>
    <string name="message_sent_positive">Mensaje enviado al Arduino</string>
    <string name="message_sent_negative">Error al enviar el mensaje al Arduino</string>
    <string name="reminder_positive">Recordatorio creado de forma exitosa</string>
    <string name="reminder_negative">Error al crear recordatorio. Por favor, intente de nuevo.</string>
    <string name="m1">Ene</string>
    <string name="m2">Feb</string>
    <string name="m3">Mar</string>
    <string name="m4">Abr</string>
    <string name="m5">May</string>
    <string name="m6">Jun</string>
    <string name="m7">Jul</string>
    <string name="m8">Ago</string>
    <string name="m9">Sep</string>
    <string name="m10">Oct</string>
    <string name="m11">Nov</string>
    <string name="m12">Dic</string>

    <string name="bluetooth_disconnect_msg">Servicio bluetooth desconectado</string>

    <string name="connect">Conectar</string>
    <string name="disconnect">Desconectar</string>
    <string name="bluetooth_connecting">Bluetooth: Conectando...</string>
    <string name="bluetooth_connected">Bluetooth: Conectado</string>
    <string name="bluetooth_disconnected">Bluetooth: Desconectado</string>
    <string name="entrada_detectada">Entrada detectada</string>
    <string name="salida_detectada">Salida detectada</string>
    <string name="vehicle_count_placeholder">Entradas: 0 | Salidas: 0</string>
    <string name="vehicle_entries">Entradas: %1$d</string>

</resources>